--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
     "type-check": "vue-tsc --build"
   },
   "dependencies": {
+    "@types/ip": "^1.1.3",
     "axios": "^1.10.0",
     "pinia": "^3.0.1",
+    "pinia-plugin-persistedstate": "^4.3.0",
     "vue": "^3.5.13",
-    "vue-router": "^4.5.0"
+    "vue-router": "^4.5.0",
+    "vuedraggable": "^4.1.0"
   },
   "devDependencies": {
     "@tsconfig/node22": "^22.0.1",
@@ -28,6 +31,7 @@
     "@vicons/tabler": "^0.13.0",
     "@vitejs/plugin-vue": "^5.2.3",
     "@vue/tsconfig": "^0.7.0",
+    "ip": "^2.0.1",
     "naive-ui": "^2.42.0",
     "npm-run-all2": "^7.0.2",
     "typescript": "~5.8.0",
@@ -36,6 +40,7 @@
     "vfonts": "^0.0.3",
     "vite": "^6.2.4",
     "vite-plugin-vue-devtools": "^7.7.2",
+    "vite-plugin-vue-setup-extend": "^0.4.0",
     "vue-tsc": "^2.2.8"
   }
 }
