feat: 重构项目结构并添加新功能
- 添加Tailwind CSS和Prettier配置
- 重构hooks目录结构，按功能分类
- 新增窗口尺寸监听、本地存储管理等hooks
- 实现主题切换动画效果
- 优化加载动画和过渡效果
- 添加系统设置面板
- 更新依赖项，包括tailwindcss和vite插件

--- a/.env
+++ b/.env
@@ -5,3 +5,4 @@ VITE_APP_PORT = 5173
 # VITE_APP_BASE_API = 'http://127.0.0.1:8080'
 VITE_APP_BASE_API = 'https://mall.jnm.ink'
 VITE_SITE_NAME = 'mallJnm后台管理系统'
+VITE_APP_TITLE = 'mallJnm后台管理系统'
