--- a/package.json
+++ b/package.json
@@ -11,10 +11,14 @@
     "type-check": "vue-tsc --build"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.11",
     "@types/ip": "^1.1.3",
     "axios": "^1.10.0",
+    "clsx": "^2.1.1",
     "pinia": "^3.0.1",
     "pinia-plugin-persistedstate": "^4.3.0",
+    "tailwind-merge": "^3.3.1",
+    "tailwindcss": "^4.1.11",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0",
     "vuedraggable": "^4.1.0"
@@ -39,6 +43,7 @@
     "unplugin-vue-components": "^28.7.0",
     "vfonts": "^0.0.3",
     "vite": "^6.2.4",
+    "vite-plugin-app-loading": "^0.4.0",
     "vite-plugin-vue-devtools": "^7.7.2",
     "vite-plugin-vue-setup-extend": "^0.4.0",
     "vue-tsc": "^2.2.8"
