--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "type-check": "vue-tsc --build"
   },
   "dependencies": {
+    "@ant-design/colors": "^7.2.1",
     "@tailwindcss/vite": "^4.1.11",
     "@types/ip": "^1.1.3",
     "axios": "^1.10.0",
     "clsx": "^2.1.1",
+    "nprogress": "^0.2.0",
     "pinia": "^3.0.1",
     "pinia-plugin-persistedstate": "^4.3.0",
     "tailwind-merge": "^3.3.1",
@@ -26,6 +28,7 @@
   "devDependencies": {
     "@tsconfig/node22": "^22.0.1",
     "@types/node": "^22.14.0",
+    "@types/nprogress": "^0.2.3",
     "@vicons/antd": "^0.13.0",
     "@vicons/carbon": "^0.13.0",
     "@vicons/fluent": "^0.13.0",
